# llvm-project

./: README.md
.github/workflows/: docs.yml  issue-release-workflow.yml  issue-subscriber.yml  libcxx-build-and-test.yaml  new-prs.yml  pr-code-format.yml  pr-subscriber.yml  release-tasks.yml  scorecard.yml
clang/docs/: OpenMPSupport.rst
clang/docs/tools/: clang-formatted-files.txt
clang/lib/AST/: ASTContext.cpp  Decl.cpp
clang/lib/Basic/: CMakeLists.txt  Cuda.cpp  TargetInfo.cpp
clang/lib/CodeGen/: BackendUtil.cpp  CGBuiltin.cpp  CGCUDANV.cpp  CGCall.cpp  CGClass.cpp  CGDecl.cpp  CGExpr.cpp  CGExprScalar.cpp  CGGPUBuiltin.cpp  CGOpenMPRuntime.cpp  CGOpenMPRuntime.h  CGOpenMPRuntimeAMDGCN.cpp  CGOpenMPRuntimeAMDGCN.h  CGOpenMPRuntimeGPU.cpp  CGOpenMPRuntimeGPU.h  CGOpenMPRuntimeNVPTX.cpp  CGOpenMPRuntimeNVPTX.h  CGStmtOpenMP.cpp  CGVTables.cpp  CMakeLists.txt  CodeGenAction.cpp  CodeGenFunction.cpp  CodeGenFunction.h  CodeGenModule.cpp  CodeGenModule.h  CodeGenTypes.cpp  CodeGenTypes.h  TargetInfo.cpp
clang/lib/Driver/: Action.cpp  CMakeLists.txt  Driver.cpp  Phases.cpp  SanitizerArgs.cpp  ToolChain.cpp  Types.cpp
clang/lib/Frontend/: CompilerInvocation.cpp
clang/lib/Headers/: CMakeLists.txt  __clang_cuda_complex_builtins.h  __clang_hip_automatic_cuda.h  __clang_hip_automatic_cuda_open.h  __clang_hip_automatic_hip.h  __clang_hip_cmath.h  __clang_hip_math.h  __clang_openmp_runtime_wrapper.h  offload_macros.h
clang/lib/Parse/: ParseOpenMP.cpp
clang/lib/Sema/: SemaCUDA.cpp  SemaDecl.cpp  SemaOpenMP.cpp  SemaStmtAsm.cpp
clang/test/Driver/: amdgpu-openmp-toolchain.c  clang-offload-bundler.c  hip-toolchain-rdc-separate.hip  openmp-invalid-target-id.c  openmp-target-id.c
clang/test/OpenMP/: irbuilder_omp_offload_metadata.c
clang/tools/: CMakeLists.txt
clang/tools/active-offload-target/: CMakeLists.txt  active-offload-target  amdgpu-arch
clang/tools/clang-nvlink-wrapper/: ClangNvlinkWrapper.cpp
clang/tools/clang-offload-bundler/: ClangOffloadBundler.cpp
clang/tools/clang-offload-wrapper/: ClangOffloadWrapper.cpp
clang/tools/clang-unbundle-archive/: ClangUnbundleArchive.cpp
clang/tools/driver/: CMakeLists.txt
clang/tools/offload-arch/: CMakeLists.txt  OffloadArch.cpp  OffloadArch.h  OffloadArchHelp.cpp  getRequirementsFromFile.cpp  make_generated_offload_arch_h.sh  pci_ids.c  pci_ids.h
clang/tools/offload-arch/amdgpu/: build_tables_from_topology_c.sh  codename2offloadarch.txt  pciid2codename.txt  vendor_specific_capabilities.cpp
clang/tools/offload-arch/intelhd/: codename2offloadarch.txt  pciid2codename.txt  vendor_specific_capabilities.cpp
clang/tools/offload-arch/nvidia/: vendor_specific_capabilities.cpp
compiler-rt/cmake/: base-config-ix.cmake
compiler-rt/lib/builtins/: CMakeLists.txt
flang/docs/: OpenMP-semantics.md
flang/lib/Frontend/: CompilerInvocation.cpp  FrontendActions.cpp
flang/lib/Lower/: Bridge.cpp  CallInterface.cpp  ConvertVariable.cpp  IntrinsicCall.cpp  OpenMP.cpp  Runtime.cpp
flang/lib/Parser/: parsing.cpp
flang/lib/Semantics/: CMakeLists.txt  canonicalize-omp.cpp  check-declarations.cpp  finalize-omp.cpp  finalize-omp.h  semantics.cpp
flang/test/Driver/: disable-llvm-passes.f90  driver-help.f90  embed.f90  include-file.f90  internal-isystem.f90  mllvm.f90  omp-driver-offload.f90  openmp-offload.f90  target-cpu-features.f90
flang/test/Examples/: omp-declarative-directive.f90
flang/test/Fir/: abstract-result-2.fir  abstract-results.fir  array-copies-pointers.fir  array-modify.fir  array-value-copy-2.fir  array-value-copy-3.fir  array-value-copy-4.fir  array-value-copy-cam4.fir  array-value-copy.fir  boxaddr-folding.fir  boxproc-2.fir  cg-ops.fir  char-conversion.fir  commute.fir  compare.fir  constant.fir  convert-fold.fir  convert-to-llvm-invalid.fir  convert-to-llvm-openmp-and-fir.fir  convert-to-llvm-target.fir  convert-to-llvm.fir  coordinateof.fir  declare-codegen.fir  declare.fir  external-mangling-emboxproc.fir  external-mangling.fir  field-index.fir  fir-fast-math.fir  fir-int-conversion.fir  fir-ops.fir  fir-types.fir  global-initialization.fir  loop01.fir  loop02.fir  memory-allocation-opt.fir  omp-declare-target-data.fir  rebox-susbtring.fir  recursive-type.fir  rename-msvc-libm.fir  target-rewrite-arg-position.fir  (+8 more)
flang/test/HLFIR/: apply-codegen.fir  apply.fir  as_expr-codegen.fir  as_expr.fir  assign-codegen.fir  assign.fir  associate-codegen.fir  associate.fir  concat-bufferization.fir  concat.fir  copy-in-out-codegen.fir  copy-in-out.fir  declare-codegen.fir  declare.fir  designate-codegen-component-refs.fir  designate-codegen.fir  designate.fir  destroy-codegen.fir  (+8 more)
llvm/docs/: requirements-hashed.txt
llvm/lib/: CMakeLists.txt
llvm/lib/OffloadArch/: CMakeLists.txt  OffloadArch.cpp  make_generated_offload_arch_h.sh
llvm/lib/OffloadArch/amdgpu/: build_tables_from_topology_c.sh  vendor_specific_capabilities.cpp
llvm/lib/OffloadArch/intelhd/: codename2offloadarch.txt  pciid2codename.txt  vendor_specific_capabilities.cpp
llvm/lib/OffloadArch/nvidia/: vendor_specific_capabilities.cpp
llvm/lib/OffloadArch/offload-arch/: CMakeLists.txt  offload-arch.cpp
openmp/: CMakeLists.txt
openmp/libomptarget/: CMakeLists.txt
openmp/libomptarget/deviceRTLs/amdgcn/: CMakeLists.txt
openmp/libomptarget/deviceRTLs/amdgcn/src/: amdgcn_access_dimensions.h  amdgcn_access_dimensions.hip  amdgcn_interface.h  amdgcn_locks.hip  amdgcn_reduction.hip  amdgcn_smid.hip  amdgcn_threadfence.ll  cuda_shim.h  cuda_shim.ll  data_sharing.cu  debug.h  device_environment.h  hip_atomics.h  interface.h  libcall.cu  loop.cu  memoryheap.cu  omp_data.cu  omptarget-nvptx.cu  omptarget-nvptx.h  option.h  parallel.cu  reduction.cu  support.cu  support.h  supporti.h  sync.cu  target_impl.h  target_impl.hip
openmp/libomptarget/plugins/hsa/: CMakeLists.txt
openmp/libomptarget/plugins/hsa/src/: elf_utils.c  elf_utils.h  rtl.cpp
openmp/libomptarget/src/: CMakeLists.txt  api.cpp  device.cpp  device.h  device_env_struct.h  exports  interface.cpp  ompt_callback.cpp  ompt_callback.h  omptarget.cpp  private.h  rtl.cpp  rtl.h
(+365 files in other folders)
